test/error/invalid-parameter-type.dsk
let f = (x) -> void
    return
